feat: 独立站功能重构（多站点多页面 + 画布编辑器 + Stripe 门店级支付）
- 一店多站、一站多页（区块 JSON 与 Canvas 双格式，AI 生成/局部修改/撤销）
- 区块编辑器与画布编辑器（左聊天右画布、文本直改、自动保存、草稿/发布）
- 房型自动生成详情页、URL 导入生成页面草稿
- 支付：SIMULATED 保留，新增 STRIPE（门店级密钥 AES-GCM 加密落库，PaymentIntent + webhook 验签幂等确认）
- 迁移 V057-V062；IndependentSite* 测试 199 例全绿